# QuickPythagoras

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.4348017FAFB15C8B.idx  utils.cpp.9FA4732EB68DEEBD.idx  utils.h.346BDC414A74B44E.idx
include/: utils.h
src/: main.cpp  utils.cpp
